<resources>
    <string name="app_name">Score Keeper app</string>
    <string name="teamA">Score Team A</string>
    <string name="teamB">Score Team B</string>
    <string name="goal">Goal !</string>
    <string name="redCard">Red card</string>
    <string name="yellowCard">Yellow card</string>
    <string name="penalties">Penalties</string>
    <string name="resScore">Reset score</string>
    <string name="lastGameA">Last game was won by team A</string>
    <string name="lastGameB">Last game was won by team B</string>
    <string name="lastGameDraw">Last game was a draw</string>
    <string name="res1">This button will reset the score</string>
    <string name="goalforteamB">This button adds score for team B</string>
    <string name="goalforteamA">This button adds score for team A</string>
</resources>
