<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.scorekeeperapp.MainActivity"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Football score app"
        android:textSize="@dimen/bigFont"
        android:gravity="center"
        android:background="@color/lightPrimaryColor"
        android:textColor="@color/textColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/halfMargin">
        <TextView
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_width="@dimen/zeroInside"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/teamA"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="@dimen/standardSizeFont"/>
        <TextView
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_width="@dimen/zeroInside"
            android:layout_height="wrap_content"
            android:text="@string/teamB"
            android:textAllCaps="true"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/standardSizeFont"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/halfMargin">
        <TextView
            android:id="@+id/scoreTeamA"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_width="@dimen/zeroInside"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="@dimen/bigFont"/>
        <TextView
            android:id="@+id/scoreTeamB"
            android:layout_marginTop="@dimen/halfMargin"
            android:layout_width="@dimen/zeroInside"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAllCaps="true"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/bigFont"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/goalButtonA"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="@dimen/zeroInside"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="goalForA"/>
        <Button
            android:layout_width="@dimen/zeroInside"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="goalForB"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/penalties"
        android:gravity="center"
        android:paddingTop="@dimen/halfMargin"
        android:paddingBottom="@dimen/halfMargin"
        android:background="@color/lightPrimaryColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="@dimen/halfMargin">
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">
                <Button
                    android:layout_marginLeft="@dimen/halfMargin"
                    android:layout_marginTop="@dimen/halfMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redCard"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/lightPrimaryColor"
                    android:layout_marginBottom="@dimen/halfMargin"
                    android:onClick="redForA"/>
                <TextView
                    android:id="@+id/redscoreA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:gravity="right"
                    android:paddingRight="@dimen/halfMargin"
                    android:layout_gravity="center"
                    android:textSize="@dimen/standardSizeFont" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">
                <Button
                    android:layout_marginLeft="@dimen/halfMargin"
                    android:layout_marginTop="@dimen/halfMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellowCard"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/halfMargin"
                    android:backgroundTint="@color/lightPrimaryColor"
                    android:onClick="yellowForA"/>
                <TextView
                    android:id="@+id/yellowA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:gravity="right"
                    android:layout_gravity="center"
                    android:textSize="@dimen/standardSizeFont"
                    android:paddingRight="@dimen/halfMargin"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="@dimen/halfMargin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">
                <TextView
                    android:id="@+id/redscoreB"
                    android:layout_width="@dimen/zeroInside"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="@dimen/halfMargin"
                    android:layout_gravity="center"
                    android:textSize="@dimen/standardSizeFont" />
                <Button
                    android:layout_marginLeft="@dimen/halfMargin"
                    android:layout_marginTop="@dimen/halfMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redCard"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/halfMargin"
                    android:backgroundTint="@color/lightPrimaryColor"
                    android:onClick="redForB"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">
                <TextView
                    android:id="@+id/yellowB"
                    android:layout_width="@dimen/zeroInside"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:gravity="left"
                    android:layout_gravity="center"
                    android:textSize="@dimen/standardSizeFont"
                    android:paddingLeft="@dimen/halfMargin"/>
                <Button
                    android:layout_marginLeft="@dimen/halfMargin"
                    android:layout_marginTop="@dimen/halfMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellowCard"
                    android:layout_gravity="center"
                    android:onClick="yellowForB"
                    android:backgroundTint="@color/lightPrimaryColor"
                    android:layout_marginBottom="@dimen/halfMargin" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetButton"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/resScore"/>
    <TextView
        android:id="@+id/lastGameScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bigFont"
        android:gravity="center"
        android:paddingTop="@dimen/bigMargin"/>
</LinearLayout>
</ScrollView>
